Attempt to fix img swapping on mobile.

--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
     transform: translateX(-50%) translateY(-50%);
 
     touch-action: manipulation;
+}
 
+#cat img {
+    display: inherit;
     -webkit-filter: drop-shadow(0px 0px 8px rgba(0,0,0,0.5));
     -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
     filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
